@@ -9,6 +9,7 @@ Mark "!": change that can break compatibility with older version
 version 4.0.10, 2013/12/04
 =========================
 * fix typo in text-empha-style(double circle).
+o enabled title attribute for link tag.
 
 version 4.0.9, 2013/12/04
 =========================
